test_samples/ingress_example/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations: {
    "fortiadc-ip" : "10.0.100.133",
    "fortiadc-login" : "fad-login-non-global",
    "fortiadc-ctrl-log" : "enable",
    "fortiadc-vdom" : "root",
    "virtual-server-ip" : "10.0.100.93",
    "virtual-server-interface" : "port1",
#    "fortiadc-vdom" : "vd1",
#    "virtual-server-ip" : "10.20.1.186",
#    "virtual-server-interface" : "port2",
    "virtual-server-port" : "443",
    "virtual-server-addr-type" : "ipv4",
    "virtual-server-waf-profile" : "High-Level-Security",
    "virtual-server-av-profile" : "Antivirus-Profile",
    "virtual-server-dos-profile" : "",
    "virtual-server-captcha-profile" : "LB_CAPTCHA_PROFILE_DEFAULT",
    "virtual-server-nat-src-pool" : "",
    "virtual-server-traffic-group" : "default",
    "virtual-server-fortiview" : "enable",
    "virtual-server-traffic-log" : "enable",
    "virtual-server-wccp" : "enable",
    "load-balance-method" : "LB_METHOD_LEAST_CONNECTION",
    "load-balance-profile" : "LB_PROF_HTTPS",
    "virtual-server-fortigslb-publicip-type" : "ipv4",
    "virtual-server-fortigslb-publicip" : "0.0.0.1",
    "virtual-server-fortigslb-1clickgslb" : "disable",
    "virtual-server-fortigslb-hostname" : "www",
    "virtual-server-fortigslb-domainname" : "yuting.testcom."
  }
spec:
  ingressClassName: fadc-ingress-controller
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-web
            port:
              name: https
#              number: 443
