test_samples/ingress_example/simple-fanout-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations: {
    "fortiadc-ip" : "10.0.100.133",
#    "fortiadc-login" : "fad-login",
    "fortiadc-login" : "fad-login-non-global",
    "fortiadc-vdom" : "root",
    "fortiadc-ctrl-log" : "enable",
    "virtual-server-ip" : "10.0.100.95",
    "virtual-server-interface" : "port1",
    "virtual-server-port" : "443",
    "load-balance-method" : "LB_METHOD_LEAST_CONNECTION",
    "load-balance-profile" : "LB_PROF_HTTPS",
    "virtual-server-fortigslb-publicip-type" : "ipv4",
    "virtual-server-fortigslb-publicip" : "0.0.0.2",
    "virtual-server-fortigslb-1clickgslb" : "disable",
    "virtual-server-fortigslb-hostname" : "www",
    "virtual-server-fortigslb-domainname" : "yuting.testcom."
  }
spec:
  ingressClassName: fadc-ingress-controller
  rules:
  - host: test.com
    http:
      paths:
      - path: /info
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 1241
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 1242
